# training_webapi

./: .flake8  .gitignore  Makefile  Pipfile  README.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml  renovate.json  swagger.yaml  swagger.yml  uwsgi.ini
.github/: dependabot.yml
.github/workflows/: linter.yml  tests.yml
db/: __init__.py  admin.py
db/migrations/: 0001_initial.py  0002_auto_20211123_1727.py  0003_comment.py
db/models/: __init__.py  comments.py  tasks.py
dockerfiles/: Dockerfile.backend  Dockerfile.db  Dockerfile.proxy
dockerfiles/files/: default.config  s3_policy.json  start_server.sh
multipassfiles/: cloud-init.yml  docker-compose.yml  setup_python.sh  start_server.sh
scripts/: check_cors.py  start_db.sh
training/: asgi.py  settings.py  urls.py  wsgi.py
webapi/: __init__.py  pagination.py  urls.py
webapi/serializers/: comments.py  errors.py  images.py  tasks.py  tokens.py  users.py
webapi/views/: images.py  maintenance.py
webapi/views/tasks/: list_create.py  patch.py  retrieve_update_destroy.py
webapi/views/tasks/comments/: list_create.py  update_destroy.py
webapi/views/users/: destroy.py  refresh.py  sign_in.py
