[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
    /(
         \.git
        |\.github
        |\.mypy_cache
        |\.pytest_cache
        |\.venv
    )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "training.settings"

[tool.poetry]
name = "training_webapi"
version = "0.1.0"
description = ""
authors = ["Yuya Oka <nnsnodnb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.14"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "5.2.0"
drf-yasg = "^1.20.0"
drf-rw-serializers = "^1.0.4"
psycopg2-binary = "^2.9.3"
argon2-cffi = "^21.3.0"
boto3 = "^1.21.46"
django-cors-headers = "^3.13.0"
django-maintenance-mode = "^0.16.3"
gunicorn = {version = "^20.1.0", extras = ["gevent"]}

[tool.poetry.dev-dependencies]
bpython = "^0.22.1"
django-extensions = "^3.1.5"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
awscli = "^1.22.101"
mypy = "^0.961"
django-stubs = "^1.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
