[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
    /(
         \.git
        |\.github
        |\.mypy_cache
        |\.pytest_cache
        |\.venv
    )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "training.settings"

[tool.poetry]
name = "training_webapi"
version = "0.1.0"
description = ""
authors = ["Yuya Oka <nnsnodnb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "5.2.2"
drf-rw-serializers = "^1.0.5"
argon2-cffi = "^21.3.0"
boto3 = "^1.28.20"
django-cors-headers = "^4.2.0"
django-maintenance-mode = "^0.18.0"
gunicorn = {version = "^21.2.0", extras = ["gevent"]}
drf-spectacular = "^0.26.4"
pyyaml = "^6.0.1"
psycopg = {extras = ["binary"], version = "^3.1.10"}

[tool.poetry.dev-dependencies]
bpython = "^0.24"
django-extensions = "^3.2.3"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
awscli = "^1.29.25"
mypy = "^1.4"
django-stubs = "^4.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
