[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
    /(
         \.git
        |\.github
        |\.mypy_cache
        |\.pytest_cache
        |\.venv
    )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "training.settings"

[tool.poetry]
name = "training_webapi"
version = "0.1.0"
description = ""
authors = ["Yuya Oka <nnsnodnb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.7"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "5.3.1"
drf-rw-serializers = "^1.0.5"
argon2-cffi = "^23.0.0"
boto3 = "^1.28.20"
django-cors-headers = "^4.2.0"
django-maintenance-mode = "^0.21.0"
gunicorn = {version = "^22.0.0", extras = ["gevent"]}
drf-spectacular = "^0.27.0"
pyyaml = "^6.0.1"
psycopg = {extras = ["binary"], version = "^3.1.10"}

[tool.poetry.group.dev.dependencies]
bpython = "^0.24"
django-extensions = "^3.2.3"
black = "^25.0.0"
isort = "^5.12.0"
flake8 = "^7.0.0"
awscli = "^1.29.25"
mypy = "^1.5"
django-stubs = "^5.0.0"
djangorestframework-stubs = {version = "^3.14", extras = ["compatible-mypy"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
